<?xml version="1.0" encoding="utf-8"?>
<resources
	xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="MissingTranslation">

    <string name="app_name">Water Ripple Flowers Live WP</string>
    <string name="app_description">about</string>
    
	<string name="settings">Water Ripple Flowers Live WP</string>

	<string name="share_text">Drill great wallpaper! https://play.google.com/store/apps/details?id=donnu.zolotarev.rushgame.android</string>
	<string name="share_chooser_text">Choose</string>

	<string name="banner_title">SKY AND SUN</string>
	<string name="banner_subtitle">LIVE WALLPAPER</string>

	<string name="main_settings">Settings</string>
	<string name="main_set_wallpaper">Set Wallpaper</string>

	<string name="main_list_gift">Gift for you</string>
	<string name="main_list_more_wallpaper">More Wallpaper</string>
	<string name="main_list_rate">Rate</string>
	<string name="main_list_share">Share</string>
	<string name="main_list_amazing_apps">Amazing Apps</string>
	<string name="main_list_contact">Developer contact</string>


	<string name="setting_list_water">Ripples on the water</string>
	<string name="setting_list_ripple_mode">Ripples in move</string>
	<string name="setting_list_change_image_time">Rate of change of pictures</string>
	<string name="setting_list_set_custom_image">Choose a picture</string>
	<string name="setting_list_rain_time">The intensity of rain</string>
	<string name="setting_list_restore_btn">restore default settings</string>
	<string name="setting_list_more">more</string>
	<string name="setting_list_top_market_title">TOP NEW FREE IN PLAY MARKET</string>
	<string name="footer_main_list_follow_me">FOLLOW ME</string>
	<string name="setting_list_more_text">See more new top apps</string>
	<string name="image_dialog_show_all">Show All</string>
	<string name="image_dialog_custom_image">Choose</string>
	<string name="rate_rate">Dear users, support Us. We appreciate each of your evaluation. This will enable us to improve and create better new applications. Thanks!</string>
	<string name="please_rate_me">Rate this app</string>
	<string name="rate_letter">NOT NOW</string>
	<string name="rate_yes">RATE</string>
	<string name="notif_msg">You have not changed the settings of wallpaper. Do it now)</string>

	<string-array name="rain_time">
		<item>Off</item>
		<item>Low</item>
		<item>Normal</item>
		<item>High</item>
	</string-array>
	<string-array name="change_image_time">
		<item>5 seconds</item>
		<item>10 seconds</item>
		<item>15 seconds</item>
		<item>30 seconds</item>
		<item>60 seconds</item>
	</string-array>



</resources>
